--- a/testdata/alicloud-esa-solver/alicloud-secret.yaml
+++ b/testdata/alicloud-esa-solver/alicloud-secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: alicloud-secret
+  name: alicloud-esa-secret
 data:
-  access-token: your-base64-encoded-access-token
-  secret-key: your-base64-encoded-secret-key
+  access-key-id: your-base64-encoded-access-key-id
+  access-key-secret: your-base64-encoded-access-key-secret
