--- a/deploy/alicloud-esa-webhook-helm/Chart.yaml
+++ b/deploy/alicloud-esa-webhook-helm/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 appVersion: "1.0"
 description: Deploys alicloud esa webhook for cert-manager.
-name: alicloud-esa-webhook
+name: alicloud-esa-webhook-helm
 version: 0.1.0
