--- a/deploy/alicloud-esa-webhook-helm/templates/rbac.yaml
+++ b/deploy/alicloud-esa-webhook-helm/templates/rbac.yaml
@@ -89,3 +89,40 @@ subjects:
     kind: ServiceAccount
     name: {{ .Values.certManager.serviceAccountName }}
     namespace: {{ .Values.certManager.namespace }}
+---
+# Grant the webhook permission to read secrets in cert-manager namespace
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name: {{ include "alicloud-esa-webhook.fullname" . }}:secret-reader
+  namespace: {{ .Values.certManager.namespace }}
+  labels:
+    app: {{ include "alicloud-esa-webhook.name" . }}
+    chart: {{ include "alicloud-esa-webhook.chart" . }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
+rules:
+  - apiGroups: [""]
+    resources: ["secrets"]
+    verbs: ["get", "list"]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: {{ include "alicloud-esa-webhook.fullname" . }}:secret-reader
+  namespace: {{ .Values.certManager.namespace }}
+  labels:
+    app: {{ include "alicloud-esa-webhook.name" . }}
+    chart: {{ include "alicloud-esa-webhook.chart" . }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: Role
+  name: {{ include "alicloud-esa-webhook.fullname" . }}:secret-reader
+subjects:
+  - apiGroup: ""
+    kind: ServiceAccount
+    name: {{ include "alicloud-esa-webhook.fullname" . }}
+    namespace: {{ .Release.Namespace }}
+
