--- a/deploy/alicloud-esa-webhook-helm/values.yaml
+++ b/deploy/alicloud-esa-webhook-helm/values.yaml
@@ -16,7 +16,7 @@ certManager:
 
 image:
   repository: ghcr.io/0xfe10/cert-manager-alicloud-esa-webhook
-  tag: sha-6b4861e
+  tag: v0.1.5
   pullPolicy: IfNotPresent
 
 nameOverride: ""
